# dcli

./: !todo.md  .gitignore  Cargo.toml  LICENSE  readme.md
.github/: build.yml
.github/workflows/: build.yml  rust.yml
App Letters/d/dcli/src/: main.rs
console/: !todo.md  Cargo.toml
console/src/: config.rs  constants.rs  editor.rs  main.rs  play.rs  settings.rs
migrations/: 20230901194929_profiles.sql  20230913155234_gamesettings.sql  20231011144814_map_info.sql  20231020081238_app_setting_doomworld.sql  20231105221516_profile_queue.sql  20231120183804_profile_save_game.sql
scripts/: local_build.ps1  prod_build.ps1  test_macos.sh  test_windows.bat  test_windows.ps1
src/: actions.rs  app_settings.rs  cli.rs  constants.rs  data.rs  db.rs  doom_data.rs  doomworld_api.rs  downloader.rs  editor.rs  files.rs  finder.rs  init.rs  log_config.rs  main.rs  menu_app_settings.rs  menu_common.rs  menu_config.rs  menu_editor.rs  menu_game_settings.rs  menu_main.rs  menu_map_editor.rs  menu_maps.rs  menu_play_settings.rs  menu_profiles.rs  menu_queues.rs  menu_view_map_readme.rs  menu_view_readme.rs  paths.rs  play.rs  profiles.rs  runner.rs  settings.rs  tui.rs
test-data/: 100_files-paul_search.json  22_files-final_search.json  e1m4b.json  error_query_too_small.json  no_results.json  nulls.json  valiant.json
