[package]
name = "dcli"
version = "0.3.14"
edition = "2021"
description = "dcli - Play Doom Quick"
authors = ["Paul Healey"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z" # Optimize for size.

[dependencies]
toml = "0.8"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
log = "0.4"
log4rs = "1"
owo-colors = "3"
strum = "0.25"
strum_macros = "0.25"
walkdir = "2.3"
indicatif = "0.17"
powershell_script = "1.1"
regex = "1.9"
tabled = "0.14"
inquire = "0.6"
clearscreen = "2"
plist = "1.5"
shlex = "1.2"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
dirs = "5"
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
urlencoding = "2.1"
strsim = "0.10"

[dependencies.uuid]
version = "1.4"
features = ["v4"]
