[package]
name = "dcli"
version = "0.3.20"
edition = "2021"
description = "dcli - Play Doom Quick"
authors = ["Paul Healey"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z" # Optimize for size.

[dependencies]
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
eyre = "0.6.12"
color-eyre = { version = "0.6.3", default-features = false }
log = "0.4.25"
log4rs = "1.3.0"
owo-colors = "4"
strum = "0.26"
strum_macros = "0.26"
walkdir = "2.5"
indicatif = "0.17.11"
powershell_script = "1.1"
regex = "1.11.1"
tabled = "0.17"
inquire = "0.7"
clearscreen = "4.0.1"
plist = "1.7"
shlex = "1.3"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "cargo"] }
dirs = "6"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
zip = "2.2.2"
urlencoding = "2.1"
strsim = "0.11"

[dependencies.uuid]
version = "1.12.1"
features = ["v4"]
